[gd_scene load_steps=2 format=3 uid="uid://caar8ogeia8u5"]

[ext_resource type="Script" path="res://Scenes/Menus/CardRewardScreen.gd" id="1_0"]

[node name="CardRewardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choisissez une carte"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sélectionnez une carte à ajouter à votre deck"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

